Tue Mar 21 15:26:03 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Test behaviour when searching for terms not in database.

Tue Mar 21 15:08:11 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Implemented OmQueryInternal::operator=()

Tue Mar 21 11:42:39 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fixes to m4 macro.  Now works correctly in both installed and
	  uninstalled cases.

Mon Mar 20 13:02:37 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Removed old Match::boolmatch() methods - superceded.

Mon Mar 20 12:50:40 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Made OmEnquire use reversebool when specified in moptions.
	  All tests now pass!

Mon Mar 20 12:23:03 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Made OmEnquire use BoolWeight to get result for boolean queries.
	  Doesn't yet pass correctness tests.

Mon Mar 20 12:21:19 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added an internaltest test for the refcounted pointers

Fri Mar 17 18:55:40 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added BoolWeight object, returns zero for all methods, for pure
	  boolean queries.

Fri Mar 17 18:38:18 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added set_weighting() method to match, to set weighting scheme
	  to be used (as a value from the IRWeight::weight_type enum).
	  Updated OmEnquire to use this: ability to set weight is just
	  one little step away from the API and the user now.

Fri Mar 17 13:39:10 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Declare this to be version 0.1.1

Thu Mar 16 17:33:36 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* New program "internaltest" added to the test suite, for
	  testing code behind the API.

	* Can now disable pthread support via configure

Thu Mar 16 13:01:46 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>
